--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,10 +15,25 @@ html {
  */
 
 body {
+  display: flex;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+  align-items: center;  
+  justify-content: column;
+  flex-flow: column;
 }
+
+
+main {
+  display: flex;
+  width: 90%;
+  background-color: #f4f1ec;
+  align-items: center;
+}
+
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
