--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,6 +7,10 @@ header {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
+  /* background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png"); */
+
+  background-image: url("https://www.transparenttextures.com/patterns/clean-gray-paper.png");;
 
 }
+
+
