--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -22,6 +22,7 @@
 
 .new-tweet h2 {
   color: black;
+  font-size: 24px;
 }
 
 .new-tweet output {
@@ -53,3 +54,9 @@
 
 }
 
+
+.new-tweet div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
