--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,7 +1,7 @@
-header {
+.topHeader {
   display: flex;
   height: 400px;
-  width: 100%;
+  width: 100%; */
   background-color: gray;
 
   justify-content: center;
